fix: width on safari

--- a/_sass/components/cookie-banner.scss
+++ b/_sass/components/cookie-banner.scss
@@ -6,6 +6,7 @@
   right: var(--fluid-space-m);
   bottom: var(--fluid-space-m);
   left: var(--fluid-space-m);
+  width: auto;
   padding: var(--s);
   padding-right: calc(3 * var(--s));
   border: none;
